Project cleanups.
- Remove the AOT setting that was blowing up Leiningen.
- Fix illegal-access warnings with a JVM setting.